fixed truncation of long entry titles, they now wrap beneath the top line of the title. not the most shui, but it works for now

--- a/app/sass/show_entry.sass
+++ b/app/sass/show_entry.sass
@@ -156,6 +156,8 @@
         height: 32px
         margin: 0 4px 0 0
         background: url(/images/icons/starlight-24.png) no-repeat center
+      span
+        padding-right: 4px
       hr
         +left
         +alpha(20)
@@ -205,10 +207,10 @@
         text-align: left
         margin: 0 0 0 20px
         top: -40px
-        padding: 4px 12px 0
-        height: 36px
-        line-height: 32px
-        max-width: 550px
+        padding: 11px 12px 0
+        min-height: 36px
+        line-height: 18px
+        max-width: 536px
 
       // BODY
       .body
